--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Organigramă</title>
 
   <script src="https://www.gstatic.com/charts/loader.js"></script>
@@ -11,12 +11,10 @@
       font-family: Arial, sans-serif;
       background: #f5f7fa;
     }
-
     #orgchart {
       width: 100%;
       overflow-x: auto;
     }
-
     .node {
       padding: 10px;
       border-radius: 12px;
@@ -25,17 +23,14 @@
       text-align: center;
       min-width: 160px;
     }
-
     .node .name {
       font-weight: bold;
       font-size: 14px;
     }
-
     .node .role {
       font-size: 12px;
       margin-top: 4px;
     }
-
     .node .dept {
       font-size: 11px;
       margin-top: 6px;
@@ -45,63 +40,3 @@
       display: inline-block;
     }
   </style>
-</head>
-
-<body>
-  <h2 style="text-align:center;">Organigramă</h2>
-  <div id="orgchart"></div>
-
-  <script>
-    google.charts.load('current', { packages: ['orgchart'] });
-    google.charts.setOnLoadCallback(loadData);
-
-    const CSV_URL =
-      'https://docs.google.com/spreadsheets/d/e/2PACX-1vT2odMcWmB4-T7bDO7JcLbK9YfvmwT08uD8I8n-8Te1-tXP8jlEPW7gvIo1YTmtaH0Y40OKNE8UUSHc/pub?gid=105198555&single=true&output=csv';
-
-    function loadData() {
-      fetch(CSV_URL)
-        .then(r => r.text())
-        .then(t => drawChart(parseCSV(t)));
-    }
-
-    function parseCSV(text) {
-      const rows = text.trim().split('\n').map(r => r.split(','));
-      const headers = rows.shift();
-
-      return rows.map(r => {
-        const o = {};
-        headers.forEach((h, i) => o[h.trim()] = (r[i] || '').trim());
-        return o;
-      });
-    }
-
-    function drawChart(data) {
-      const dt = new google.visualization.DataTable();
-      dt.addColumn('string', 'Name');
-      dt.addColumn('string', 'Manager');
-      dt.addColumn('string', 'ToolTip');
-
-      data.forEach(r => {
-        const name = r['Nume intern'];
-        const manager = r['Reports to'] || null;
-
-        const html = `
-          <div class="node">
-            <div class="name">${name}</div>
-            <div class="role">${r['Rol']}</div>
-            <div class="dept">${r['Departament']}</div>
-          </div>
-        `;
-
-        dt.addRow([{ v: name, f: html }, manager, r['Rol']]);
-      });
-
-      const chart = new google.visualization.OrgChart(
-        document.getElementById('orgchart')
-      );
-
-      chart.draw(dt, { allowHtml: true });
-    }
-  </script>
-</body>
-</html>
