--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
       font-family: Arial, sans-serif;
       background: #f5f7fa;
     }
+
     #orgchart {
       width: 100%;
       overflow-x: auto;
     }
+
     .node {
       padding: 10px;
       border-radius: 12px;
@@ -23,20 +25,31 @@
       text-align: center;
       min-width: 160px;
     }
+
     .node .name {
       font-weight: bold;
       font-size: 14px;
     }
+
     .node .role {
       font-size: 12px;
       margin-top: 4px;
+      opacity: 0.9;
     }
+
     .node .dept {
       font-size: 11px;
       margin-top: 6px;
-      background: rgba(255,255,255,0.15);
+      background: rgba(255,255,255,0.2);
       border-radius: 8px;
       padding: 2px 6px;
       display: inline-block;
     }
   </style>
+</head>
+
+<body>
+  <h2 style="text-align:center;">Organigramă</h2>
+  <div id="orgchart"></div>
+</body>
+</html>
