--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Organigramă</title>
 
-  <!-- Google Charts -->
   <script src="https://www.gstatic.com/charts/loader.js"></script>
 
   <style>
@@ -41,7 +40,6 @@
     .node .role {
       font-size: 12px;
       margin-top: 4px;
-      opacity: 0.9;
     }
 
     .node .dept {
@@ -61,31 +59,57 @@
 
   <script>
     google.charts.load('current', { packages: ['orgchart'] });
-    google.charts.setOnLoadCallback(drawChart);
+    google.charts.setOnLoadCallback(loadData);
 
-    function drawChart() {
-      const query = new google.visualization.Query(
-        'https://docs.google.com/spreadsheets/d/e/2PACX-1vT2odMcWmB4-T7bDO7JcLbK9YfvmwT08uD8I8n-8Te1-tXP8jlEPW7gvIo1YTmtaH0Y40OKNE8UUSHc/pubhtml?gid=105198555&single=true'
+    const CSV_URL =
+      "https://docs.google.com/spreadsheets/d/e/2PACX-1vT2odMcWmB4-T7bDO7JcLbK9YfvmwT08uD8I8n-8Te1-tXP8jlEPW7gvIo1YTmtaH0Y40OKNE8UUSHc/pub?gid=105198555&single=true&output=csv";
+
+    function loadData() {
+      fetch(CSV_URL)
+        .then(r => r.text())
+        .then(text => drawChart(parseCSV(text)));
+    }
+
+    function parseCSV(text) {
+      const rows = text.trim().split("\n").map(r => r.split(","));
+      const headers = rows.shift();
+
+      return rows.map(r => {
+        const obj = {};
+        headers.forEach((h, i) => obj[h.trim()] = (r[i] || "").trim());
+        return obj;
+      });
+    }
+
+    function drawChart(data) {
+      const dt = new google.visualization.DataTable();
+      dt.addColumn('string', 'Name');
+      dt.addColumn('string', 'Manager');
+      dt.addColumn('string', 'ToolTip');
+
+      data.forEach(row => {
+        if (!row["Nume intern"]) return;
+
+        const html = `
+          <div class="node">
+            <div class="name">${row["Nume intern"]}</div>
+            <div class="role">${row["Rol"]}</div>
+            <div class="dept">${row["Departament"]}</div>
+          </div>
+        `;
+
+        dt.addRow([
+          { v: row["Nume intern"], f: html },
+          row["Reports to"] || null,
+          row["Rol"]
+        ]);
+      });
+
+      const chart = new google.visualization.OrgChart(
+        document.getElementById("orgchart")
       );
 
-      query.send(response => {
-        if (response.isError()) {
-          document.getElementById('orgchart').innerHTML =
-            'Eroare: ' + response.getMessage();
-          return;
-        }
-
-        const data = response.getDataTable();
-
-        const chart = new google.visualization.OrgChart(
-          document.getElementById('orgchart')
-        );
-
-        chart.draw(data, {
-          allowHtml: true,
-          size: 'medium'
-        });
-      });
+      chart.draw(dt, { allowHtml: true });
     }
   </script>
 </body>
