--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
     .node {
       padding: 10px;
-      border-radius: 12px;
-      background: #0f6c7a;
+      border-radius: 10px;
       color: white;
       text-align: center;
       min-width: 160px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
     }
 
     .name {
@@ -38,16 +38,23 @@
     .role {
       font-size: 12px;
       margin-top: 4px;
+      opacity: 0.95;
     }
 
     .dept {
       font-size: 11px;
       margin-top: 6px;
-      background: rgba(255,255,255,0.15);
-      border-radius: 8px;
       padding: 2px 6px;
+      border-radius: 6px;
+      background: rgba(255,255,255,0.2);
       display: inline-block;
     }
+
+    /* CULORI PE DEPARTAMENTE */
+    .Growth { background: #2E8B57; }
+    .Performance { background: #0F6C7A; }
+    .Support { background: #6A5ACD; }
+    .Communication { background: #C46A00; }
   </style>
 </head>
 
@@ -56,60 +63,67 @@
   <div id="orgchart"></div>
 
   <script>
+    google.charts.load('current', { packages: ['orgchart'] });
+    google.charts.setOnLoadCallback(loadData);
+
     const CSV_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vTmxAF6tY8qazYHtrd1Qxfe2sM4SRDlbbYgFdB5n4tf03rDXi69uif_BK4QyP7_91lnMOJVeQuKFPkS/pub?output=csv";
 
-    google.charts.load("current", { packages: ["orgchart"] });
-    google.charts.setOnLoadCallback(loadData);
-
     function loadData() {
       fetch(CSV_URL)
-        .then(r => r.text())
-        .then(parseCSV)
-        .then(drawChart)
-        .catch(err => console.error("CSV load error:", err));
+        .then(res => res.text())
+        .then(text => drawChart(parseCSV(text)));
     }
 
     function parseCSV(text) {
-      const lines = text.trim().split("\n");
-      const headers = lines.shift().split(",");
+      const rows = text.trim().split("\n").map(r => r.split(","));
+      const headers = rows.shift();
 
-      return lines.map(line => {
-        const cols = line.split(",");
-        let obj = {};
+      return rows.map(r => {
+        const obj = {};
         headers.forEach((h, i) => {
-          obj[h.trim()] = (cols[i] || "").trim();
+          obj[h.trim()] = (r[i] || "").trim();
         });
         return obj;
       });
     }
 
-    function drawChart(rows) {
-      const data = new google.visualization.DataTable();
-      data.addColumn("string", "Name");
-      data.addColumn("string", "Manager");
-      data.addColumn("string", "ToolTip");
+    function drawChart(data) {
+      const chartData = new google.visualization.DataTable();
+      chartData.addColumn('string', 'Name');
+      chartData.addColumn('string', 'Manager');
+      chartData.addColumn('string', 'ToolTip');
 
-      rows.forEach(r => {
-        const name = r["Nume intern"];
-        const manager = r["Reports to"] || null;
+      data.forEach(row => {
+        const name = row["Nume intern"];
+        const manager = row["Reports to"] || null;
+        const role = row["Rol"];
+        const dept = row["Departament"] || "";
+        const deptClass = dept.replace(/\s+/g, "");
 
         const html = `
-          <div class="node">
+          <div class="node ${deptClass}">
             <div class="name">${name}</div>
-            <div class="role">${r["Rol"]}</div>
-            <div class="dept">${r["Departament"]}</div>
+            <div class="role">${role}</div>
+            <div class="dept">${dept}</div>
           </div>
         `;
 
-        data.addRow([{ v: name, f: html }, manager, r["Rol"]]);
+        chartData.addRow([
+          { v: name, f: html },
+          manager,
+          role
+        ]);
       });
 
       const chart = new google.visualization.OrgChart(
-        document.getElementById("orgchart")
+        document.getElementById('orgchart')
       );
 
-      chart.draw(data, { allowHtml: true });
+      chart.draw(chartData, {
+        allowHtml: true,
+        size: 'medium'
+      });
     }
   </script>
 </body>
