--- a/index.html
+++ b/index.html
@@ -46,15 +46,9 @@
       margin-top: 6px;
       padding: 2px 6px;
       border-radius: 6px;
-      background: rgba(255,255,255,0.2);
+      background: rgba(255,255,255,0.25);
       display: inline-block;
     }
-
-    /* CULORI PE DEPARTAMENTE */
-    .Growth { background: #2E8B57; }
-    .Performance { background: #0F6C7A; }
-    .Support { background: #6A5ACD; }
-    .Communication { background: #C46A00; }
   </style>
 </head>
 
@@ -68,6 +62,13 @@
 
     const CSV_URL =
       "https://docs.google.com/spreadsheets/d/e/2PACX-1vTmxAF6tY8qazYHtrd1Qxfe2sM4SRDlbbYgFdB5n4tf03rDXi69uif_BK4QyP7_91lnMOJVeQuKFPkS/pub?output=csv";
+
+    const DEPT_COLORS = {
+      "Growth": "#2E8B57",
+      "Performance": "#0F6C7A",
+      "Support": "#6A5ACD",
+      "Communication": "#C46A00"
+    };
 
     function loadData() {
       fetch(CSV_URL)
@@ -98,11 +99,11 @@
         const name = row["Nume intern"];
         const manager = row["Reports to"] || null;
         const role = row["Rol"];
-        const dept = row["Departament"] || "";
-        const deptClass = dept.replace(/\s+/g, "");
+        const dept = row["Departament"];
+        const color = DEPT_COLORS[dept] || "#555";
 
         const html = `
-          <div class="node ${deptClass}">
+          <div class="node" style="background:${color}">
             <div class="name">${name}</div>
             <div class="role">${role}</div>
             <div class="dept">${dept}</div>
