--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     const DEPT_COLORS = {
       "Growth": "#2E8B57",
       "Performance": "#0F6C7A",
-      "Performance (Data)": "#8A2BE2",
+      "Performance (Data)": "#c96ade",
       "Support": "#6A5ACD",
       "Communication": "#C46A00"
     };
