--- a/responsabilitati.html
+++ b/responsabilitati.html
@@ -1,14 +1,89 @@
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-    <meta charset="UTF-8">
-    <title>Responsabilitățile persoanei</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <title>Responsabilitățile lui <span id="name"></span></title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f7fa;
+      margin: 0;
+      padding: 24px;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .task {
+      padding: 10px;
+      margin: 5px 0;
+      background: #e4e9f0;
+      border-radius: 8px;
+    }
+
+    #tasks {
+      width: 70%;
+      margin: 0 auto;
+    }
+  </style>
 </head>
 <body>
-    <h1>Responsabilitățile pentru <span id="name"></span></h1>
-    <div id="tasks"></div>
-    
-    <script src="responsabilitati.js"></script>
+  <h1>Responsabilitățile lui <span id="name"></span></h1>
+  <div id="tasks"></div>
+
+  <script>
+    // Preia parametrii din URL
+    const params = new URLSearchParams(window.location.search);
+    const name = params.get("name");
+    const role = params.get("role");
+    const dept = params.get("dept");
+
+    // Afișează numele angajatului pe pagina
+    document.getElementById('name').textContent = name;
+
+    // URL-ul CSV-ului pentru a prelua responsabilitățile
+    const CSV_URL = "https://docs.google.com/spreadsheets/d/e/2PACX-1vTmxAF6tY8qazYHtrd1Qxfe2sM4SRDlbbYgFdB5n4tf03rDXi69uif_BK4QyP7_91lnMOJVeQuKFPkS/pub?output=csv";
+
+    function getData() {
+      fetch(CSV_URL)
+        .then(response => response.text())
+        .then(parseCSV)
+        .then(displayTasks)
+        .catch(error => console.error('Eroare la încărcarea CSV:', error));
+    }
+
+    function parseCSV(text) {
+      const rows = text.trim().split("\n").map(r =>
+        r.split(",").map(c => c.replace(/^"|"$/g, "").trim())
+      );
+
+      const headers = rows[0];
+      return rows.slice(1).map(row => {
+        const obj = {};
+        headers.forEach((h, i) => obj[h] = row[i] || "");
+        return obj;
+      });
+    }
+
+    function displayTasks(data) {
+      const tasksContainer = document.getElementById('tasks');
+      const relevantTasks = data.filter(row => row["Nume intern"] === name);
+
+      if (relevantTasks.length > 0) {
+        relevantTasks[0]["Taskuri"].split(";").forEach(task => {
+          const taskDiv = document.createElement("div");
+          taskDiv.classList.add("task");
+          taskDiv.textContent = task;
+          tasksContainer.appendChild(taskDiv);
+        });
+      } else {
+        tasksContainer.textContent = "Nu s-au găsit responsabilități pentru această persoană.";
+      }
+    }
+
+    getData();
+  </script>
 </body>
 </html>
