--- a/index.html
+++ b/index.html
@@ -4,109 +4,112 @@
   <meta charset="UTF-8" />
   <title>Organigramă</title>
 
-  <!-- Link către fișierul CSS extern -->
-  <link rel="stylesheet" href="styles.css">
-
   <!-- Google Charts -->
   <script src="https://www.gstatic.com/charts/loader.js"></script>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f7fa;
+      margin: 0;
+      padding: 24px;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    #orgchart {
+      width: 100%;
+      overflow-x: auto;
+    }
+
+    .node {
+      padding: 10px 14px;
+      border-radius: 12px;
+      color: #fff;
+      text-align: center;
+      min-width: 170px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      cursor: pointer;
+    }
+
+    .name {
+      font-weight: bold;
+      font-size: 14px;
+    }
+
+    .role {
+      font-size: 12px;
+      margin-top: 4px;
+      opacity: 0.95;
+    }
+
+    .dept {
+      font-size: 11px;
+      margin-top: 6px;
+      background: rgba(255,255,255,0.2);
+      padding: 2px 8px;
+      border-radius: 8px;
+      display: inline-block;
+    }
+
+    /* Modal */
+    #modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    #modal-content {
+      background-color: #fff;
+      margin: 15% auto;
+      padding: 20px;
+      width: 80%;
+      max-width: 500px;
+    }
+
+    #close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    #close:hover,
+    #close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    #modal-tasks {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
 
   <h1>Organigramă</h1>
   <div id="orgchart"></div>
 
-  <!-- Modal pentru responsabilități -->
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <span id="close" class="close">&times;</span>
+  <!-- Modal for tasks -->
+  <div id="modal">
+    <div id="modal-content">
+      <span id="close">&times;</span>
       <h2 id="modal-name"></h2>
       <p id="modal-role"></p>
       <div id="modal-tasks"></div>
     </div>
   </div>
 
-  <script>
-    google.charts.load('current', { packages: ['orgchart'] });
-    google.charts.setOnLoadCallback(loadData);
+  <script src="orgchart.js"></script>
 
-    // 🔗 CSV PUBLICAT (exact linkul tău)
-    const CSV_URL =
-      "https://docs.google.com/spreadsheets/d/e/2PACX-1vTmxAF6tY8qazYHtrd1Qxfe2sM4SRDlbbYgFdB5n4tf03rDXi69uif_BK4QyP7_91lnMOJVeQuKFPkS/pub?output=csv";
-
-    // 🎨 CULORI PE DEPARTAMENT
-    const DEPT_COLORS = {
-      "Growth": "#2E8B57",
-      "Performance": "#0F6C7A",
-      "Performance (Data)": "#c96ade",
-      "Support": "#6A5ACD",
-      "Communication": "#C46A00"
-    };
-
-    function loadData() {
-      fetch(CSV_URL)
-        .then(r => r.text())
-        .then(parseCSV)
-        .then(drawChart)
-        .catch(err => {
-          console.error("Eroare la încărcarea CSV:", err);
-        });
-    }
-
-    function parseCSV(text) {
-      const rows = text.trim().split("\n").map(r =>
-        r.split(",").map(c => c.replace(/^"|"$/g, "").trim())
-      );
-
-      const headers = rows[0];
-      return rows.slice(1).map(row => {
-        const obj = {};
-        headers.forEach((h, i) => obj[h] = row[i] || "");
-        return obj;
-      });
-    }
-
-    function drawChart(dataRows) {
-      const data = new google.visualization.DataTable();
-      data.addColumn('string', 'Name');
-      data.addColumn('string', 'Manager');
-      data.addColumn('string', 'Tooltip');
-
-      dataRows.forEach(row => {
-        const name = row["Nume intern"];
-        const manager = row["Reports to"] || "";
-        const role = row["Rol"];
-        const dept = row["Departament"];
-
-        const color = DEPT_COLORS[dept] || "#607D8B";
-
-        const html = `
-          <div class="node" style="background:${color}">
-            <div class="name">${name}</div>
-            <div class="role">${role}</div>
-            <div class="dept">${dept}</div>
-          </div>
-        `;
-
-        data.addRow([
-          { v: name, f: html },
-          manager,
-          `${name} – ${role}`
-        ]);
-      });
-
-      const chart = new google.visualization.OrgChart(
-        document.getElementById('orgchart')
-      );
-
-      chart.draw(data, {
-        allowHtml: true,
-        allowCollapse: true,
-        size: 'large'
-      });
-
-      // Afișarea modalului atunci când se face click pe un nume
-      google.visualization.events.addListener(chart, 'select', function() {
-        const selectedItem = chart.getSelection()[0];
-        const name = data.getValue(selectedItem.row, 0);  // Obține numele din linia selectată
-        const role = data.getValue(selectedItem.row, 1);  // Obține rolul
-        const dept = data.getV
+</body>
+</html>
